# ealib-modern

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  INSTALL.md  MODERNIZATION_NOTES.md  README.md
examples/: CMakeLists.txt
libann/: CMakeLists.txt
libea/: CMakeLists.txt
libea/include/ea/digital_evolution/: hardware.h  instruction_set.h
libmkv/: CMakeLists.txt
